@@ -1,4 +1,4 @@
-# CurrencyConverter
+# Currency Converter
 
 ## Project Description
 
@@ -10,6 +10,29 @@ The application is a simple console-based Java application, so to run it, you ne
 Upon running the program, the user will be prompted to enter the amount they want to convert. The program will then display the current exchange rate of any currency to PLN and the result of the conversion.
 
 ## Technologies used
-Java 8
-The json.org library for handling JSON format
-The JavaFX library for creating a graphical user interface (optional)
+* Java 8
+* The json.org library for handling JSON format
+* The JavaFX library for creating a graphical user interface (optional)
+
+## How to Run the Application
+1. Download and install the java on your computer, if you haven't done so already.
+2. Download the source files from the Github repository.
+3. Open a terminal and navigate to the folder with the source files.
+4. Compile the program using the command javac Main.java.
+5. Run the program using the command java Main.
+
+## Running the Graphical User Interface
+1. Download and install the JRE on your computer, if you haven't done so already.
+2. Download and install JavaFX on your computer.
+3. Download the source files from the Github repository.
+4. Open a terminal and navigate to the folder with the source files.
+5. Compile the program using the command javac --module-path /path/to/javafx-sdk-16/lib --add-modules javafx.controls MainGUI.java.
+6  Run the program using the command java --module-path /path/to/javafx-sdk-16/lib --add-modules javafx.controls MainGUI.
+
+## Author
+
+@lsocpb
+
+## License
+
+[MIT](https://choosealicense.com/licenses/mit/)
